--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
   --just-black: #000000;
   --light-black: #212121;
   --hover-blue: #2196f3;
@@ -544,4 +544,4 @@ body {
   gap: 30px;
 }
 
-PORTFOLIO-MAIN-END */
+PORTFOLIO-MAIN-END
