--- a/css/styles.css
+++ b/css/styles.css
@@ -581,8 +581,8 @@ justify-content: center;
 fill: var(--social-icon-gray);
 }
 
-.logo-box .logo-hover:hover,
-.logo-box .logo-hover:focus {
+.logo-box:hover,
+.logo-box:focus {
   fill: var(--hover-blue);
   border: 1px solid var(--hover-blue);
   border-radius: 4px;
