--- a/css/styles.css
+++ b/css/styles.css
@@ -582,12 +582,17 @@ justify-content: center;
 fill: var(--social-icon-gray);
 }
 
-.logo-box .logo-hover:hover,
-.logo-box .logo-hover:focus {
-  fill: var(--hover-blue);
+.logo-box:hover,
+.logo-box:focus {
   border: 1px solid var(--hover-blue);
   border-radius: 4px;
   }
+
+  .logo-hover:hover,
+  .logo-hover:focus {
+    fill: var(--hover-blue);
+  }
+
 
 /* CLIENTS-SECTION-END */
 
