--- a/css/styles.css
+++ b/css/styles.css
@@ -641,10 +641,14 @@ fill: var(--social-icon-gray);
 
 .buttons:hover {
   border-color: var(--hover-blue);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .buttons:focus {
   border-color: var(--hover-blue);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .images-section {
