--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,13 @@ body {
 .nav-text:hover {
   color: var(--hover-blue);
   text-decoration: underline;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-text:focus {
   color: var(--hover-blue);
   text-decoration: underline;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current-page-nav {
@@ -91,6 +93,7 @@ body {
   color: var(--hover-blue);
   text-decoration: underline;
   fill: var(--hover-blue);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -154,6 +157,23 @@ body {
   display: flex;
   margin-left: 50px}
 
+  .current-page-nav{
+    position: relative;
+  }
+
+.current-page-nav::after {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 100%;
+  height: 4px;
+  background-color: var(--hover-blue);
+  border-radius: 2px;
+  pointer-events: none;
+  top: 46px;
+}
+
+
 /* HEADER-END */
 
 .list {
@@ -189,14 +209,17 @@ body {
 .footer-contact:hover {
   text-decoration: underline;
   color: var(--hover-blue);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact:focus {
   color: var(--hover-blue);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact:active {
   color: var(--hover-blue);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .background-footer {
@@ -264,13 +287,15 @@ body {
   fill: var(--just-white);
 }
 
-.social-icon-footer:hover {
+.social-icon-footer:hover,
+.social-icon-footer:focus {
   height: 44px;
   width: 44px;
   border-radius: 50px;
   background-color: var(--hover-blue);
   fill: var(--just-white);
   cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -311,6 +336,7 @@ body {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 4px;
   background: var();
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -555,6 +581,7 @@ justify-content: center;
   border: var(--hover-blue);
   fill: var(--just-white);
   cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* GRAY-SECTION-END */
@@ -595,6 +622,7 @@ fill: var(--social-icon-gray);
   border: 1px solid var(--hover-blue);
   border-radius: 4px;
   fill: var(--hover-blue);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
 
@@ -658,12 +686,14 @@ fill: var(--social-icon-gray);
   border-color: var(--hover-blue);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .buttons:focus {
   border-color: var(--hover-blue);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .images-section {
@@ -675,7 +705,8 @@ fill: var(--social-icon-gray);
 
 .images-section:hover,
 .images-section:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  background: box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -719,6 +750,87 @@ fill: var(--social-icon-gray);
   gap: 30px;
 }
 
+
+.card-animation-box {
+  overflow: hidden;
+  position: relative;
+}
+
+.card-animation {
+  background: rgba(33, 150, 243, 0.9);;
+  position: absolute;
+  left: inherit;
+  top: inherit; 
+  width: 370px;
+  height: 294px;
+  transform: translateY(100%);
+}
+
+.card-animation{
+  display: flex;
+  align-items: center;
+}
+
+.card-animation p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 156%;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  width: 301px;
+  height: 196px;
+  margin-left: 24px;
+}
+
+.images-section:focus .card-animation,
+.images-section:hover .card-animation{
+transform: translateY(-100%);
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.images-section:focus,
+.images-section:hover
+{border: 1px solid #EEEEEE;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
 PORTFOLIO-MAIN-END
 
+.backdrop {
+  position: fixed;
+  height: 1024px;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 581px;
+  top: 50%;
+  left: 50%;
+  background: var(--just-white);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.close-btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 8px;
+  right: 8px;
+  background-color: var(--just-white);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
